# dispro

./: README.md  dispro.org  dispro.org_archive  index.html  pyproject.toml  tailwind.config.js
data/ELTEC_FILES/: cierne_a_biele_saty__kubani.xml  corpus_metadata.csv  dom_v_strani__kukucin.xml  emigranti__kubani.xml  hlad_a_laska__kubani.xml  neprebudeny__kukucin.xml  novy_rok__pauliny-toth.xml  rysava_jalovica__kukucin.xml  skola_a_zivot__pauliny-toth.xml
data/archive/: count_titles.py
data/meta/: zoznam_diel.csv
data/od_juls/: Chov_masnych_kralikov_1944-final.odt  Jesensky_Zo_zajatia_1918-final.odt  Mňačko, Ladislav - Mosty na východ.docx  Nasa dedinka_1916-final.odt  Natsin_Zivot vciel_1943-2023-10-24-final.odt  Počiatky silospytu ( fiziky)_1879-final.odt  Pred nami hviezda_J.Dianovsky-2023-04-06-final.odt  babilon_prva_kucharska_kniha_2_1870-final.odt  compare.py  dispro_zoznam.csv  dobrodruzstvo pri obzinkoch_1935-2023-10-18-final.odt  druhy_zoznam.csv  druhy_zoznam__dirty.csv  jack_1921-final.odt  kostra_na stalina_1952-final.odt  reisel_doma_1953-final.odt  treti_zoznam.csv  (+3 more)
disproweb/: disproweb.py
schemas/: eltec.xsl
scripts/: dispro.py  eltec.py  fix_encoding.py  imgs2eltec.py  ocr_images.py  ocr_pdf.py  pdf2eltec.py  process_juls.py  scrape.py  test.py  validate.py  zoznam_autorov.html
ucebnica/: 00.md  10_kapitola_1.md  30_kapitola_3.md  50_Bibliography.md  Exported Items.bib  Makefile  defaults.yaml  disprobook.docx  disprobook.epub  disprobook.tex  docx.yaml  epub.yaml  kapitola01.org  kapitola02.org  kapitola03.org  pdf.yaml  references.bib  sources.bib  tex.yaml  ucebnica.org
(+2043 files in other folders)
