[tool.poetry]
name = "dispro"
version = "0.1.0"
description = ""
authors = ["Marek Vician <marc.vician@gmail.com>"]
readme = "README.md"
packages = [{include = "dispro"}]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.2"
jinja2 = "^3.1.2"
pytesseract = "^0.3.10"
pymupdf = "^1.23.4"
pdf2image = "^1.16.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
