[tool.poetry]
name = "dispro"
version = "0.1.0"
description = ""
authors = ["Marek Vician <marc.vician@gmail.com>"]
readme = "README.md"
packages = [{include = "dispro"}]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.2"
jinja2 = "^3.1.2"
pytesseract = "^0.3.10"
pymupdf = "^1.23.4"
pdf2image = "^1.16.3"
html-from-epub = "^0.2.1"
odtreader = "^0.0.5"
python-docx = "^1.0.1"
taguette = "^1.4.1"
pyinquirer = "^1.0.3"
lxml = "^4.9.3"
pdf2docx = "^0.5.6"
escrotum = "^1.0.1"
pygobject = "^3.46.0"
livereload = "^2.6.3"
unidecode = "^1.3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
